# ZeroPythia

./: .gitignore  NOTICE  README.md  install.sh  main.py  pyproject.toml  uninstall.sh  zeropythia.service
ZeroPythia/config/: __init__.py  zerofeed.py
ZeroPythia/controller/: feedforward_steuerung.py  oscillation_detectorv2.py  phase_controller.py  pre_processor.py  regulator.py  zerofeed_regulator.py
ZeroPythia/dashboard/: __init__.py  i18n.py  models.py  server.py
ZeroPythia/dashboard/templates/: dashboard.html
ZeroPythia/gridpythia/: models.py  plan_subscriber.py  status_reporter.py
ZeroPythia/gridpythia_bridge/: models.py  plan_subscriber.py  status_reporter.py
ZeroPythia/runtime/: __init__.py  auto_mode.py  control_runtime.py  models.py  sampler.py
ZeroPythia/services/: updater.py
clients/mqtt/: __init__.py  client.py
clients/shelly/: __init__.py  shelly.py
clients/zendure/: __init__.py  aiozen.py  base.py  http_client.py  models.py
clients/zendure/mock/: __init__.py  async_mock_client.py
config/: zerofeed.yaml  zerofeed_v4.yaml
gui/: analysis_gui.py
simulator/: __init__.py  batch_runner.py  grid_simulator.py  optimizer.py
src/config/: zerofeed.py  zerofeed_v4.py
src/controller/: csv_logger.py  feedforward_steuerung.py  oscillation_detectorv2.py  phase_controller.py  phase_controllers.py  pre_processor.py  regulator.py  zerofeed_regulator.py  zerofeed_v3.py
src/dashboard/: auto_mode.py  i18n.py  models.py  regulator.py  runtime.py  server.py
src/dashboard/regulators/: __init__.py  v3_adapter.py  v4_adapter.py
src/dashboard/templates/: dashboard.html
src/gridpythia/: __init__.py  plan_executor.py  plan_subscriber.py  status_reporter.py
src/runtime/: auto_mode.py  control_runtime.py  models.py  sampler.py
tests/integration/: test_auto_mode_mqtt.py  test_dashboard_auto_activate.py  test_plan_subscriber_freshness.py  test_soc_guards.py
tests/unit/clients/: test_bypass_toggle.py  test_mode_transitions.py  test_shelly.py  test_zendure.py
tests/unit/controller/: test_baseload_predictor.py  test_config.py  test_edge_oscillation.py  test_feedforward.py  test_phase_controller.py  test_plan_models.py  test_preprocessor.py  test_watchdog.py
utils/: clean_csv.py  fast_optimize.py  plot_zerofeed_v3.py  quick_test.py  run_pipeline.py  start_dashboard_mock.py  start_dashboard_server.py  start_gridpythia_bridge.py  start_zerofeed_v3.py  test_ff_controllers.py
