[project]
name = "zero-feed-controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.4",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "ruff>=0.15.8",
    "tqdm>=4.67.3",
    "ty>=0.0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clients", "src", "gui", "simulator", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
exclude = [
    "tests",
    "scripts",
]
output-format = "full"

[tool.ruff.lint]
select = [
    "F",      # Enable all `Pyflakes` rules.
    "W",      # Enable all `Pyflakes` warnings.
    "D",      # Enable all `pydocstyle` rules (Google convention).
    "S",      # Enable all `flake8-bandit` rules (security).
    "B",      # Enable `flake8-bugbear`-style warnings (practical issues).
    "I",      # Import-related checks (imports, ordering).
]
ignore = [
    # On top of `pydocstyle (D)`
    "D100",   # undocumented-public-module: Missing docstring in public module
    "D101",   # undocumented-public-class: Missing docstring in public class
    "D102",   # undocumented-public-method: Missing docstring in public method
    "D103",   # undocumented-public-function: Missing docstring in public function
    "D104",   # undocumented-public-package: Missing docstring in public package
    "D105",   # undocumented-magic-method: Missing docstring in magic method
    "D106",   # undocumented-public-nested-class: Missing docstring in public nested class
    "D107",   # undocumented-public-init: Missing docstring in __init__
    "D417",   # undocumented-param: Missing argument description in the docstring for {definition}: {name}
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
root = ["."]
python = ".venv"