[project]
name = "zero-feed-controller"
version = "0.1.0"
description = "Three-phase zero-feed-in battery controller with feedforward + feedback regulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.4",
    "fastapi[standard]>=0.100.0",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.12.5",
    "ruamel.yaml>=0.18",
    "uvicorn>=0.20.0",
    "websockets>=11.0",
]

[dependency-groups]
dev = [
    "matplotlib",
    "ruff",
    "tqdm",
    "ty",
]

[project.urls]
Repository = "https://github.com/YOUR_USERNAME/zero-feed-controller"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clients", "src", "gui", "simulator", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
exclude = [
    "tests",
    "scripts",
]
output-format = "full"

[tool.ruff.lint]
select = [
    "F",      # Enable all `Pyflakes` rules.
    "W",      # Enable all `Pyflakes` warnings.
    "D",      # Enable all `pydocstyle` rules (Google convention).
    "S",      # Enable all `flake8-bandit` rules (security).
    "B",      # Enable `flake8-bugbear`-style warnings (practical issues).
    "I",      # Import-related checks (imports, ordering).
]
ignore = [
    # On top of `pydocstyle (D)`
    "D100",   # undocumented-public-module: Missing docstring in public module
    "D101",   # undocumented-public-class: Missing docstring in public class
    "D102",   # undocumented-public-method: Missing docstring in public method
    "D103",   # undocumented-public-function: Missing docstring in public function
    "D104",   # undocumented-public-package: Missing docstring in public package
    "D105",   # undocumented-magic-method: Missing docstring in magic method
    "D106",   # undocumented-public-nested-class: Missing docstring in public nested class
    "D107",   # undocumented-public-init: Missing docstring in __init__
    "D417",   # undocumented-param: Missing argument description in the docstring for {definition}: {name}
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
root = ["."]
python = ".venv"